Material und Werkzeug
Signed-off-by: Stefan Helmert <stefan.helmert@t-online.de>

--- a/PanzerroboterFinnisage.tex
+++ b/PanzerroboterFinnisage.tex
@@ -155,6 +155,52 @@
 	\end{tikzpicture}
 }
 
+\section{Werkzeug}
+\frame
+{
+\frametitle{Werkzeug}
+	\textbf{Hardware}
+	\begin{itemize}
+		\item 3d-Drucker
+		\item Lötkolben
+		\item Schraubendreher
+		\item Zangen
+		\item Bohrschleifer 
+		\item Computer
+	\end{itemize}
+	\textbf{Software}
+	\begin{itemize}
+		\item Openscad
+		\item Cura
+		\item Octoprint
+		\item Codeblocks, gcc
+		\item Linux
+		\item Node.js
+	\end{itemize}
+}
+
+\section{Material}
+\frame
+{
+\frametitle{Material}
+	\begin{itemize}
+		\item Henglong-Panzer
+		\item Filament für 3d-Drucker
+		\item Kapton-Tape (oder Koptan ;))
+		\item Lötzinn
+		\item Schauben
+		\item Besenstiel
+		\item PCs mit Zubehör
+		\item Netzwerkkabel
+		\item IP-Kameras
+		\item Gaffa-Tape
+		\item Kabel 
+		\item RaspberryPi
+	\end{itemize}
+	\textbf{Wir brauchen viele Sachen!}
+
+}
+
 % ----------------------------------------------------------------
 
 \end{document}
