fast fertig oder doch ganz
Signed-off-by: Stefan Helmert <stefan.helmert@t-online.de>

--- a/PanzerroboterFinnisage.tex
+++ b/PanzerroboterFinnisage.tex
@@ -181,12 +181,28 @@
 		\item Cura
 		\item Octoprint
 		\item Codeblocks, gcc
+		\item Sourcetree, git
 		\item Linux
 		\item Node.js
 	\end{itemize}
 }
 \frame{\frametitle{3D-Drucker}
 	\includegraphics[width=10cm]{3D-Drucker.jpg}	
+}
+\frame{\frametitle{Openscad -- 3D-Entwurfssoftware}
+	\includegraphics[width=10cm]{Openscad.png}	
+}
+\frame{\frametitle{Cura -- 3D-Drucksoftware}
+	\includegraphics[width=10cm]{Cura.png}	
+}
+\frame{\frametitle{Octoprint -- 3D-Druckserver}
+	\includegraphics[width=10cm]{Octoprint.png}	
+}
+\frame{\frametitle{Codeblocks -- Programmierumgebung}
+	\includegraphics[width=10cm]{Codeblocks.png}	
+}
+\frame{\frametitle{Sourcetree -- Versionsverwaltung}
+	\includegraphics[width=10cm]{Sourcetree.png}	
 }
 \frame{\frametitle{Roboter mit Kamera}
 	\includegraphics[width=10cm]{Robobesser.jpg}	
@@ -232,19 +248,24 @@
 			
 	\end{tikzpicture}
 }
-\section{Aufzeichnung}
-\frame{\frametitle{Aufzeichnung}
-	\includegraphics[width=10cm]{HDDueberwachung.png}	
-}
-\frame{\frametitle{Aufzeichnung}
-	\includegraphics[width=10cm]{HDDueberwachung2.png}	
-}
-\section{Die ‹berwachungsstation}
+
+\section{Station}
 \frame{\frametitle{‹berwachungsstation}
 	\includegraphics[width=10cm]{Station_v.jpg}	
 }
 
-
+\section{Projektdaten}
+\frame{\frametitle{‹berwachungsstation -- Daten}
+	\textbf{Temperaturen}
+	\begin{itemize}
+		\item Raum: 26 ∞C
+		\item Netzteil: 29 ∞C
+		\item Rechner (auﬂen): 32 ∞C
+		\item Rechner (auf Kopf): 39 ∞C
+		\item Rechner (Robosteuerung): 34 ∞C
+		\item Dell-Laptop: 42 ∞C
+	\end{itemize}
+}
 
 
 
@@ -289,4 +310,12 @@
 	\begin{itemize}
 		\item ein Tischler -- Holzkonstruktion der ‹berwachungsstation
 	\end{itemize}
+}
+
+\section{Aufzeichnung}
+\frame{\frametitle{Aufzeichnung}
+	\includegraphics[width=10cm]{HDDueberwachung.png}	
+}
+\frame{\frametitle{Aufzeichnung}
+	\includegraphics[width=10cm]{HDDueberwachung2.png}	
 }
